fix: fix for metrics server access